Rearrange for subdomain.

--- a/labs/index.html
+++ b/labs/index.html
@@ -122,11 +122,11 @@
 
             <section>
                 <h2>License</h2>
-                Code at interactivedatascience.courses/labs is released under
+                Code at mooc.interactivedatascience.courses/labs is released under
                 the
                 <a href="https://opensource.org/license/bsd-3-clause"
                     >BSD 3-Clause License</a
-                >. Everything else at interactivedatascience.courses/labs is
+                >. Everything else at mooc.interactivedatascience.courses/labs is
                 released under the
                 <a href="https://creativecommons.org/licenses/by/4.0/"
                     >CC-BY License</a
