--- a/labs/resources_text.html
+++ b/labs/resources_text.html
@@ -100,7 +100,7 @@
             <section id="text">
                 <h2>Text</h2>
                 Go ahead and
-                <a href="/PublicSans-Regular.otf"
+                <a href="/support/PublicSans-Regular.otf"
                     >download Public Sans' regular font in OTF format</a
                 >
                 and add it to your
