--- a/labs/resources_data.html
+++ b/labs/resources_data.html
@@ -81,7 +81,7 @@
                 <ul>
                     <li>
                         We will again use
-                        <a href="/PublicSans-Regular.otf" target="_blank"
+                        <a href="/support/PublicSans-Regular.otf" target="_blank"
                             >PublicSans-Regular as an OTF file</a
                         >.
                     </li>
