--- a/mooc_src/index.html
+++ b/mooc_src/index.html
@@ -45,7 +45,7 @@
         </div>
         <main id="main">
             <div class="intro">
-                <h1>Interactive Data Science and Visualization</h1>
+                <h1 class="extra-pad-header">Interactive Data Science and Visualization</h1>
 
                 <div class="tag content">
                     <p>
