Improve the lessons intro text.

--- a/mooc_src/index.html
+++ b/mooc_src/index.html
@@ -131,9 +131,11 @@
                     <a href="#primitives">primitives</a>,
                     <a href="#combination">combination</a>,
                     <a href="#conversation">conversation</a>, and
-                    <a href="#context">context</a>. It is recommended that you
-                    go in order as material from one lesson helps set up the
-                    concepts introduced in the subsequent lessons.
+                    <a href="#context">context</a>. You may consider
+                    going in order as material from one lesson helps set up the
+                    concepts introduced in the subsequent lessons. However, you
+                    are also encouraged to jump around to meet your own learning
+                    objectives.
                 </p>
                 <div id="preface" class="lesson-section">
                     <h3>Preface</h3>
