--- a/mooc_src/index.html
+++ b/mooc_src/index.html
@@ -299,7 +299,7 @@
                     <ul>
                         {% for lecture in sections['conclusion'] %}
                         <li>
-                            <a href="{{ lecture['url'] }}"
+                            <a href="/lesson{{ lesson['number'] }}.html"
                                 >Lecture {{ lecture['number'] }}: {{
                                 lecture['name'] }}</a
                             >
