Fix issue with paragraph tag in lesson intro.

--- a/mooc_src/lesson.html
+++ b/mooc_src/lesson.html
@@ -61,7 +61,7 @@
             <div class="intro">
                 <h1>{{ name }}</h1>
 
-                <p class="content">{{ text | safe }}</p>
+                <div class="content">{{ text | safe }}</div>
 
                 <details>
                     <summary>Lesson Table of Contents</summary>
