Finish cleanup on course_wide.

--- a/course_wide/rubric.html
+++ b/course_wide/rubric.html
@@ -11,8 +11,7 @@
         </div>
         <header>
             This rubric is part of
-            <a href="/">Interactive Data Science and Visualization</a>. Also see
-            <a href="/labs">skills labs</a>.
+            <a href="/">Interactive Data Science and Visualization</a>.
         </header>
         <main id="main">
             <h1>Code Projects Rubric</h1>
@@ -24,13 +23,8 @@
             <details>
                 <summary>Other formats</summary>
                 <p>
-                    This rubric is available in multiple formats:
+                    This rubric is available in other formats: <a href="/course_wide/rubric.md">Markdown version</a> | <a href="/course_wide/rubric.pdf">PDF version</a>
                 </p>
-                <ul>
-                    <li><a href="/course_wide/rubric.html">HTML version</a> (you are here)</li>
-                    <li><a href="/course_wide/rubric.md">Markdown version</a></li>
-                    <li><a href="/course_wide/rubric.pdf">PDF version</a> (from UC Berkeley Spring 2025 teaching)</li>
-                </ul>
             </details>
 
             <details>
