Update auditing resources section in manual.html

--- a/course_wide/manual.html
+++ b/course_wide/manual.html
@@ -489,7 +489,7 @@
 
                 <h4>Auditing resources</h4>
                 <p>
-                    As the course is taught, updated rehearsal recordings will be posted online shortly after the lecture is delivered in class. These will have manually reviewed captions and will be publicly available. Please join us in the Zulip community to receive notifications when lectures and their corresponding reading assignments become accessible. Finally, those auditing are welcome to join in person. However, if space is limited, seats will be prioritized for those attending for credit. My apologies!
+                    Those auditing are welcome to join in person and online in our Zulip community. However, if space is limited, physical seats will be prioritized for those attending for credit. My apologies!
                 </p>
                 <p>
                     Beyond recordings, other activities are available to those registered within the Zulip community or who have been given an alternative accommodation (for which there may be limited resources). With access given after completing the welcome survey, this is only open to those in the UC Berkeley community (students, staff, faculty).
