Update syllabus formats section
Removed link to HTML version of the syllabus.

--- a/course_wide/syllabus.html
+++ b/course_wide/syllabus.html
@@ -24,7 +24,7 @@
             <details>
                 <summary>Other formats</summary>
                 <p>
-                    This syllabus is available in other formats: <a href="/course_wide/syllabus.html">HTML version</a> (you are here) | <a href="/course_wide/syllabus.md">Markdown version</a> | <a href="/course_wide/syllabus.pdf">PDF version</a> (from UC Berkeley Spring 2025 teaching)
+                    This syllabus is available in other formats: <a href="/course_wide/syllabus.md">Markdown version</a> | <a href="/course_wide/syllabus.pdf">PDF version</a> (from UC Berkeley Spring 2025 teaching)
                 </p>
             </details>
 
