--- a/labs/ai_agents.html
+++ b/labs/ai_agents.html
@@ -1,12 +1,12 @@
 # Advanced AI Techniques
-Using advanced AI techniques for data visualization including llms.txt, agentic workflows, and task files.
+Using advanced AI techniques for data visualization including llms.txt, agentic workflows / subagents, and task files.
 
 ## Motivation
 We've just seen [how we can chat with an AI assistant in building simple visualizations](/labs/ai_basics.html) but let's consider two potential challenges and two solutions.
 
 **Knowledge**: What if you ask the AI assistant about a technology it perhaps doesn't know much about or maybe where that technology has changed since when the AI was built? There is a protocol called [llms.txt](https://llmstxt.org/) which lets us provide new knowledge to assistants. It is kind of like a library for AI!
 
-**Context**: What about building visualizations with novel representations or lots of customization where there's quite a bit more code or iteration? AI assistants have limited "context" or chat lengths. This can sometimes impair our ability to use them in more complex tasks. That said, some assistants like [Claude](https://claude.ai/new) allow for use of "agents" which you can think of as allowing multiple AI assistants to coordinate with each other, saving any individual from over-burdening their context.
+**Context**: What about building visualizations with novel representations or lots of customization where there's quite a bit more code or iteration? AI assistants have limited "context" or chat lengths. This can sometimes impair our ability to use them in more complex tasks. That said, some assistants like [Claude](https://claude.ai/new) allow for use of "subagents" which you can think of as allowing multiple AI assistants to coordinate with each other, saving any individual from over-burdening their context.
 
 **Reproducibility**: If we have a lot of work with an AI, how can we document our work? We will discuss [markdown](https://www.markdownguide.org/) and the use of "task files" that allow us to prompt assistants with more structure and documentation.
 
@@ -16,19 +16,26 @@ This tutorial will walk through use of llms.txt and, optionally, use of assistan
 There are a few ways to pull this off but, if you are interested in using agents, going through Claude Code and the command line may be a good strategy. Otherwise, let's make sure you have what you need in order to do this entirely from the browser.
 
 ### Using the browser
-If you don't want to use the command line, it may be best to try this without agents. Don't worry though! We can still demonstrate the use of llms.txt and task files. Just make sure to have the web version of your assistant ready to go and use the [Sketchingpy online sketchbook](https://editor.sketchingpy.org/).
+If you don't want to use the command line, it may be best to try this without agents. Don't worry though! We can still demonstrate the use of llms.txt and task files. Just make sure to have the web version of your assistant ready to go and use the [Sketchingpy online sketchbook](https://editor.sketchingpy.org/). Please ensure 
 
 ### Preparing agents on the command line
 If working with agents on the command line, the best place to get started is to create a new empty directory to do the work:
 
 ```
 $ mkdir wolves_moose_viz
+$ cd wolves_moose_viz
 ```
 
 Then, write a [requirements.txt](https://pip.pypa.io/en/stable/reference/requirements-file-format/) file which is a way to denote what libraries are in use for that project (which is useful both to humans and AI working on the project with you):
 
 ```
-$ echo "sketchingpy[desktopall]" >> requirements.txt
+$ echo "sketchingpy[static]" >> requirements.txt
+```
+
+In addition to Sketchingpy, we will also grab Pillow:
+
+```
+$ echo "pillow" >> requirements.txt
 ```
 
 Let's also add some tools that can help us write cleaner Python code. The first is [pyflakes](https://github.com/PyCQA/pyflakes) which is a tool to automatically check Python files for issues that would prevent that code from running.
@@ -46,7 +53,7 @@ $ echo "pycodestyle" >> requirements.txt
 Finally, it is often a good idea to use a [virtual environment](https://docs.python-guide.org/dev/virtualenvs/) to keep your system clean:
 
 ```
-$ python -m venv venv
+$ python3 -m venv venv
 $ source venv/bin/activate
 $ pip install -r requirements.txt
 ```
@@ -57,11 +64,13 @@ If that isn't your preference though, you can install directly:
 $ pip install -r requirements.txt
 ```
 
-Lastly, go ahead and install your AI assistant's command line tool. For this tutorial, we will use [Claude Code](https://code.claude.com/docs/en/setup). To log in after installing, simply start the assistant.
+Lastly, go ahead and install your AI assistant's command line tool in a different terminal window. For this tutorial, we will use [Claude Code](https://code.claude.com/docs). Please follow the [install instructions](https://code.claude.com/docs/en/setup) and then start the assistant to ensure you are logged in.
 
 ```
 $ claude
 ```
+
+It is recommended that you start Claude from within the `wolves_moose_viz` directory.
 
 ## Importing knowledge
 First, let's tell our AI assistant about the latest version of [Sketchingpy](https://sketchingpy.org) which we will use to perform the drawing.
@@ -79,21 +88,21 @@ Note that some assistants might have limited internet access. If that's the case
 We will have two agents: one that completes a task as described in a text file and another that checks the work of the first agent and fixes any issues with styling using pycodestyle and pyflakes. Depending on the assistant you are using, there might be different instructions for adding a new agent. For Claude, type `/agents` into the Claude Code interface and then add a new agent. When asked for description, try something like (note that, if you are not using a virtual environment, remove the comment about using venv):
 
 ```
-This implementer agent should be given the path to a markdown file describing a task to complete. It should read that file and complete the task using Sketchingpy. In order to prepare to do its work, it should also then read https://sketchingpy.org/llms-full.txt?v=20250915. After it has gathered all of the necessary information, it should make a detailed todo list to complete the task assigned. Finally, when done, it should update the task markdown file with a description of what it did and if it encountered any issues. It should run the script before concluding work but it does not need to worry about any style issues which will be addressed by a later agent.
+This implementer agent should be given the path to a markdown file describing a task to complete. It should read that file and complete the task using Sketchingpy. In order to prepare to do its work, it should also then read https://sketchingpy.org/llms-full.txt?v=20250915. After it has gathered all of the necessary information, it should make a detailed todo list to complete the task assigned. Finally, when done, it should update the task markdown file with a description of what it did and if it encountered any issues. It should run the script before concluding work but it does not need to worry about any style issues which will be addressed by a later agent. Please call this agent `implementer`. Please ask it to use the venv.
 ```
 
-After done, go ahead and add a second agent:
+You can use the recommended agent settings including to put this in the project folder and the option to provide a description but let Claude make the actual agent file. After done, go ahead and add a second agent:
 
 ```
-This checker agent should be given the path to a markdown file describing a task that was just worked on by another agent. It should read that file and investigate the specific changes made to complete that task which should have been done using Sketchingpy. In order to prepare to do its work, it should also then read https://sketchingpy.org/llms-full.txt?v=20250915. After it has gathered all of the necessary information, it should double check and, where appropriate, improve that work. In addition to running the script to ensure it executes successfully, it should also run pyflakes followed by pycodestyle to resolve any problems identified. Please have it update the task file with any issues encountered and report overall status to the agent which called it.
+This checker agent should be given the path to a markdown file describing a task that was just worked on by another agent. It should read that file and investigate the specific changes made to complete that task which should have been done using Sketchingpy. In order to prepare to do its work, it should also then read https://sketchingpy.org/llms-full.txt?v=20250915. After it has gathered all of the necessary information, it should double check and, where appropriate, improve that work. In addition to running the script to ensure it executes successfully, it should also run pyflakes followed by pycodestyle to resolve any problems identified. Please have it update the task file with any issues encountered and report overall status to the agent which called it. Please call this agent `checker`. Please ask it to use the venv.
 ```
 
-Having added these two agents, we now have kinda a "special purpose" AI assistant for implementing our ideas and another to check that work and improve it. We are splitting across these two so that neither on their own run out of room in their context.
+Having added these two agents, we now have kinda a "special purpose" AI assistant for implementing our ideas and another to check that work and improve it. We are splitting across these two so that neither on their own run out of room in their context. However, we are also giving them instructions they should follow each time to ensure success.
 
 ## Scaffolding
 Alright we should be ready to take our first step which is just to sketch out the outlines of the code we want to have draw this visualization. This will let us dictate the code's architecture and then fill it in progressively through subsequent tasks.
 
-That objective in sight, consider that many AI assistants use Markdown as a way to converse with the user. This is a lightweight way to structure text where `#` means a top level header, `##` means a sub-header, `**` means bold, the tick character means code, and `-` means a list. There are resources to [learn how to use Markdown](https://www.markdownguide.org/) with its many features but we will try to stick to that for now. Specifically, we will make Markdown files each with an individual task to be completed by our AI assistant.
+That objective in sight, consider that many AI assistants use Markdown as a way to converse with the user and to internally represent conversation. Indeed, agent files are just markdown! Anyway, this is a lightweight way to structure text where `#` means a top level header, `##` means a sub-header, `**` means bold, the tick character means code, and `-` means a list. There are resources to [learn how to use Markdown](https://www.markdownguide.org/) with its many features but we will try to stick to that for now. Specifically, we will make Markdown files each with an individual task to be completed by our AI assistant.
 
 All that in mind, let's make a new text file called `01_scaffold.md`. Then read and place the following inside:
 
@@ -133,7 +142,7 @@ Get the y position corresponding to a year which is to be used in all series.
 
 Get the length of the bar to show for a series (wolves, moose) in pixels. Error thrown if the series is unknown or unsupported.
 
-`_get_color(self, series: str) -> float`
+`_get_color(self, series: str) -> str`
 
 Get the hex code to use for a given series (wolves, moose, year). Error thrown if the series is unknown or unsupported.
 
@@ -149,7 +158,7 @@ If not using agents, attach your markdown file as an attachment to your chat and
 Great! Next, please read and complete the attached task file. Please prepare a Python script.
 ```
 
-When done, take the Python code generated and double check it! Maybe confirm that, even if it doesn't do anything yet, that the script runs and finishes without error. This is a similar cycle of iteration we saw in our earlier experiments with AI!
+When done, take the Python code generated and double check it! Maybe confirm that, even if it doesn't do anything yet, that the script runs and finishes without error. This is a similar cycle of iteration we saw in our earlier experiments with AI! A `NotImpementedError` may be anticipated.
 
 ### Scaffolding with agents
 If using agents, go ahead and run Claude Code in the directory in a new chat and ask it something like the following:
@@ -194,7 +203,7 @@ At the top of the file after imports, let's define some constants:
 
  - Let's move our min and max values for wolves and moose to constants `MIN_WOLVES` (0), `MAX_WOLVES` (50), `MIN_MOOSE` (0), and `MAX_MOOSE` (2400).
  - Let's also define the colors we want to use as `BACKGROUND_COLOR` (#F0F0F0), `AXIS_COLOR` (#333333), `WOLVES_COLOR` (#D95F02), and `MOOSE_COLOR` (#7570B3).
- - Let's also use the `sans-serif` font (`FONT`) with `AXIS_SIZE` as 15px (15) and `BODY_SIZE` as 13px (13).
+ - Let's also use the `` font (`FONT`) with `AXIS_SIZE` as 15px (15) and `BODY_SIZE` as 13px (13).
  - Let's also create some common spacing where the center of the first column for year is at x coordinate of 55px (`YEAR_X = 55`), the right align target for wolves is x coordinate of 245px (`WOLVES_X = 245`) and the align target for moose is 255px (`MOOSE_X = 255`). The width of the year column should be 50px (`YEAR_WIDTH`) and columns for wolves and moose should be 140px wide (but no constant needed since we will use the value inline).
  - Let's also use `WIDTH` and `HEIGHT` for sketch dimensions.
  - Let's say that the header and footer height (`AXIS_HEIGHT`) is 30px.
@@ -222,10 +231,14 @@ Please use `BODY_SIZE` for text in the bottom. Text should use fill and no strok
 
 ## Notes
 
-Please use `AXIS_HEIGHT` in both draw bottom and draw top. Also, if needed, prior task markdown files are present in this directory like `01_scaffold.md`.
+Please use `AXIS_HEIGHT` in both draw bottom and draw top. Also, if needed, prior task markdown files are present in this directory like `01_scaffold.md`. Please use the font at http://mooc.interactivedatascience.courses/support/web/PublicSans-Regular.otf.
 ```
 
-Please execute this using the agent or manual flow from before and check the result.
+Please execute this using the agent or manual flow from before and check the result. Don't forget that your coordinating agent (the one you talk to directly) can also assist with edits like if something feels too cramped or not quite right! For example:
+
+```
+The 1980 seems to start too far down. Can you have the years start maybe 15 pixels higher?
+```
 
 ## Draw years
 Next, we can start filling in some of the elements from the data themselves, starting with the years. Let's make a `04_draw_years.md`:
@@ -259,10 +272,14 @@ Next, let's have the count for the species drawn at the y position for year and 
 If needed, prior task markdown files are present in this directory like `01_scaffold.md`.
 ```
 
-Continue and we should have a pretty good visualization! However, there are a few things we might want to tighten up since we have so much control over drawing.
+Continue and we should have a pretty good visualization! However, there are a few things we might want to tighten up since we have so much control over drawing. Once more, you might be seeing some things to improve and you can ask for help like:
+
+```
+I think we are almost there... the text is a bit high off of the corresponding bar. Can you bring them closer together and make the text right above the bars like 2px smaller (ensure the year text still uses the original size)? Let's also shift the bar down just maybe 2 pixels.
+```
 
 ## Finishing touches
-Finishing off this iterative process, let's highlight the max values from both series and clean up the title / labeling.
+Finishing off this iterative process, let's highlight the max values from both series and clean up the title / labeling. Consider this `06_finish.md`:
 
 ```
 # Finish
@@ -278,6 +295,7 @@ Let's use 18px `AXIS_COLOR` text at the top of the sketch that says "Isle Royale
 If needed, prior task markdown files are present in this directory like `01_scaffold.md`.
 ```
 
-If you still need more help tweaking elements, don't forget that your coordinating agent (the one you talk to directly) can also assist with edits!
+Take a look at the result and, if anything needs tweaks, be sure to use the coordinating agent to resolve anything final or use this as a chance to modify the code directly!
 
 ## Reflection
+This tutorial offers some techniques to engage AI on difficult or long tasks where you can break up elements into individual steps and, optionally, then ask subagents to work through those steps using repeatable structured actions all without exhausting context. In any case, this co-iteration with AI remains essential so that you can retain an active hand in ensuring a positive overall outcome, guiding assistants in their work as they go. Indeed, thanks to things like llms.txt, you can also invite assistants into tasks where they can use the latest information available. Granted, what we discussed today may not necessarily be required for each task. A markdown document can be helpful when you have a lot to say or want to ensure there is an auditable trail of what you tried. Additionally, llms.txt are more important for libraries which change often, are new, or may be less well known. Finally, subagents really are bets for larger efforts and, for smaller edits, might not be worth the overhead. Consider these as valuable ingredients as you craft your engagement with AI.
