Improve end of ai_basics.

--- a/labs/ai_basics.html
+++ b/labs/ai_basics.html
@@ -220,9 +220,7 @@ pip install matplotlib
             <section id="next">
                 <h2>Next</h2>
 
-                That's the start of AI. However, this code snippet was pretty small and it was using a pre-built chart from matplotlib. What might using AI look like when we take advantage of Sketchingpy? To continue exploring AI techniques for data visualization, proceed to
-                <a href="/labs/ai_advanced.html">Tutorial 14</a>
-                to learn about advanced AI techniques including llms.txt and agentic workflows.
+                This is a first stab at a relatively simple script. However, what happens when things get longer or more involved? What if we have a chart type for which there isn't already a pre-built implementation? Continue onwards to <a href="/labs/ai_advanced.html">Tutorial 14</a> to learn about advanced AI techniques including llms.txt and subagents / agentic workflows.
 
                 <details>
                     <summary>Citations</summary>
