Mechanical fixes in ai_basics.
Some mechanical fixes helped along by Claude in an expanded version of ai basics tutorial.

--- a/labs/ai_basics.html
+++ b/labs/ai_basics.html
@@ -38,7 +38,7 @@
                 <h2>Motivation</h2>
 
                 <p>
-                    So far, we have been building data visualizations through a combination of pre-built charting libraries (like through matplotlib) and custom drawing with technologies like Sketchingpy. However, sometimes it can be a lot of code. Iteration times between one idea to the next can be extensive. What if we could get through those cycles faster? Maybe we could explore more design possibilies!
+                    So far, we have been building data visualizations through a combination of pre-built charting libraries (like through matplotlib) and custom drawing with technologies like Sketchingpy. However, sometimes it can be a lot of code. Iteration times between one idea to the next can be extensive. What if we could get through those cycles faster? Maybe we could explore more design possibilities!
                 </p>
                 
                 <p>
@@ -54,7 +54,7 @@
                 <h2>Role of AI</h2>
 
                 <p>
-                    AI assistants like <a href="https://claude.ai/">Claude</a>, <a herf="http://chatgpt.com/">ChatGPT</a>, or other language models can help generate visualization code quickly. However, they don't necessarily know about design and can't experience visualizations the same way you (and your human audiences) will. A lot of the heavy lifting still comes from guiding solutions to a good conclusion, taking advantage of the techniques we discussed in class. Put another way, they work best when you bring your visualization expertise to direct the conversation which involves:
+                    AI assistants like <a href="https://claude.ai/">Claude</a>, <a href="https://chat.openai.com/">ChatGPT</a>, or other language models can help generate visualization code quickly. However, they don't necessarily know about design and can't experience visualizations the same way you (and your human audiences) will. A lot of the heavy lifting still comes from guiding solutions to a good conclusion, taking advantage of the techniques we discussed in class. Put another way, they work best when you bring your visualization expertise to direct the conversation which involves:
                 </p>
 
                 <ul>
@@ -130,7 +130,7 @@ pip install matplotlib
                 </ul>
 
                 <p>
-                    Take a moment to examine the output. What do you notice? Can you see the predator-prey relationship in the data? The classic predator-prey oscillation pattern migh be visible. However, it's likely that the wolf data appear compressed because AI made a symmetric scale: the range of the actual data on one side is much smaller (up to 50) than the other (up to 2500). This brings us to our first iteration.
+                    Take a moment to examine the output. What do you notice? Can you see the predator-prey relationship in the data? The classic predator-prey oscillation pattern might be visible. However, it's likely that the wolf data appear compressed because AI made a symmetric scale: the range of the actual data on one side is much smaller (up to 50) than the other (up to 2500). This brings us to our first iteration.
                 </p>
             </section>
 
