Remove duplicate "example"

--- a/labs/ai_basics.html
+++ b/labs/ai_basics.html
@@ -72,7 +72,7 @@
                 <h2>Prepare</h2>
 
                 <p>
-                    We'll be using <a href="https://matplotlib.org/">matplotlib</a> to create a visualization of predator-prey dynamics between wolves and moose populations at Isle Royale National Park, returning to an example from <a href="/lesson1.html">Lesson 1</a>. This gives us a nice example which has some dimensionality but still tame enough that we can take advantage of some pre-built charts.
+                    We'll be using <a href="https://matplotlib.org/">matplotlib</a> to create a visualization of predator-prey dynamics between wolves and moose populations at Isle Royale National Park, returning to an example from <a href="/lesson1.html">Lesson 1</a>. This gives us a nice dataset which has some dimensionality but still tame enough that we can take advantage of some pre-built charts.
                 </p>
 
                 <p>
