Split up conclusion on ai_advanced.

--- a/labs/ai_advanced.html
+++ b/labs/ai_advanced.html
@@ -420,7 +420,11 @@ If needed, prior task markdown files are present in this directory like `01_scaf
                 <h2>Reflection</h2>
 
                 <p>
-                    This tutorial offers some techniques to engage AI on difficult or long tasks where you can break up elements into individual steps and, optionally, then ask subagents to work through those steps using repeatable structured actions all without exhausting context. In any case, this co-iteration with AI remains essential so that you can retain an active hand in ensuring a positive overall outcome, guiding assistants in their work as they go. Indeed, thanks to things like llms.txt, you can also invite assistants into tasks where they can use the latest information available. Granted, what we discussed today may not necessarily be required for each task.
+                    This tutorial offers some techniques to engage AI on difficult or long tasks where you can break up elements into individual steps and, optionally, then ask subagents to work through those steps using repeatable structured actions all without exhausting context. In any case, this co-iteration with AI remains essential so that you can retain an active hand in ensuring a positive overall outcome, guiding assistants in their work as they go. Indeed, thanks to things like llms.txt, you can also invite assistants into tasks where they can use the latest information available.
+                </p>
+
+                <p>
+                    Granted, what we discussed today may not necessarily be required for each task:
                 </p>
 
                 <ul>
