--- a/mooc_src/index.html
+++ b/mooc_src/index.html
@@ -49,8 +49,7 @@
 
                 <div class="tag content">
                     <p>
-                        Explore the design and construction of world-class data
-                        visualizations and interactive data science experiences.
+                        Open source course on designing and engineering interactive experiences with data. Through a multi-disciplinary approach including data visualization, build tools for yourself to find insight, create impactful pieces to share discoveries with others, and craft digital spaces which invite audiences in to co-create meaning with you.
                     </p>
                 </div>
 
