--- a/mooc_src/index.html
+++ b/mooc_src/index.html
@@ -49,7 +49,7 @@
 
                 <div class="tag content">
                     <p>
-                        Open source course on designing and engineering interactive experiences with data. Through traditional data visualization approaches but extneded through a multi-disciplinary approach, build tools for yourself to find insight, create impactful pieces to share discoveries with others, and craft digital spaces which invite audiences in to co-create meaning with you.
+                        Open source course on designing and engineering interactive experiences with data. Through traditional data visualization approaches but extended through a multi-disciplinary approach, build tools for yourself to find insight, create impactful pieces to share discoveries with others, and craft digital spaces which invite audiences in to co-create meaning with you.
                     </p>
                 </div>
 
