Update meta description in index.html
Removed promotional phrase from meta description.

--- a/labs/index.html
+++ b/labs/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skills Labs (Interactive Data Science & Visualization)</title>
-        <meta name="description" content="14 hands-on labs covering Python, graphics, data visualization, preattentive features, and AI-assisted design. Interactive tutorials with live code. Start learning today." />
+        <meta name="description" content="14 hands-on labs covering Python, graphics, data visualization, preattentive features, and AI-assisted design. Interactive tutorials with live code." />
         <link href="/support/web/supplemental.css" rel="stylesheet" type="text/css" />
 
         <meta
